// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`All States 1`] = `
<div data-size="auto">
  <div>
    <div>
      <div>
        <button
          data-state="idle"
          data-variant="info"
        >
          <div>
          </div>
          Steg
        </button>
        <button
          data-state="active"
          data-variant="default"
          aria-current="step"
        >
          <div>
          </div>
          Steg
        </button>
        <button
          data-state="completed"
          data-variant="default"
        >
          <div>
          </div>
          Steg
        </button>
        <button
          data-state="invalid"
          data-variant="default"
          aria-invalid="true"
        >
          <div>
          </div>
          Steg
        </button>
      </div>
      <div>
        <button
          data-state="idle"
          data-variant="info"
        >
          <div>
          </div>
          Infoside
        </button>
        <button
          data-state="active"
          data-variant="info"
          aria-current="step"
        >
          <div>
          </div>
          Infoside
        </button>
      </div>
      <div>
        <button
          data-state="idle"
          data-variant="summary"
        >
          <div>
          </div>
          Oppsummering
        </button>
        <button
          data-state="active"
          data-variant="summary"
          aria-current="step"
        >
          <div>
          </div>
          Oppsummering
        </button>
      </div>
      <div>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="active"
          data-variant="submission"
          aria-current="step"
        >
          <div>
          </div>
          Innsending
        </button>
      </div>
      <div>
        <button
          data-state="idle"
          data-variant="confirmation"
        >
          <div>
          </div>
          Bekreftelse
        </button>
        <button
          data-state="active"
          data-variant="confirmation"
          aria-current="step"
        >
          <div>
          </div>
          Bekreftelse
        </button>
      </div>
    </div>
    <div>
      <div>
        <u-details
          data-state="idle"
          open
          role="group"
        >
          <u-summary
            aria-expanded="true"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="idle"
          open
          role="group"
        >
          <u-summary
            aria-expanded="true"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="completed"
          open
          role="group"
        >
          <u-summary
            aria-expanded="true"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="invalid"
          open
          role="group"
        >
          <u-summary
            aria-invalid
            aria-expanded="true"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="invalid"
          open
          role="group"
        >
          <u-summary
            aria-invalid
            aria-expanded="true"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
    </div>
    <div>
      <div>
        <u-details
          data-state="idle"
          role="group"
        >
          <u-summary
            aria-expanded="false"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="completed"
          role="group"
        >
          <u-summary
            aria-expanded="false"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="invalid"
          role="group"
        >
          <u-summary
            aria-invalid
            aria-expanded="false"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="idle"
          role="group"
          data-active-step-label="Første steg"
        >
          <u-summary
            aria-expanded="false"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="completed"
          role="group"
          data-active-step-label="Første steg"
        >
          <u-summary
            aria-expanded="false"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="completed"
            data-variant="default"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
      <div>
        <u-details
          data-state="invalid"
          role="group"
          data-active-step-label="Første steg"
        >
          <u-summary
            aria-invalid
            aria-expanded="false"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Seksjon
            </span>
          </u-summary>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Tredje steg
          </button>
          <button
            data-state="invalid"
            data-variant="default"
            aria-invalid="true"
          >
            <div>
            </div>
            Fjerde steg
          </button>
        </u-details>
      </div>
    </div>
  </div>
</div>
`;

exports[`Full 1`] = `
<div data-size="auto">
  <div>
    <div>
      <div>
        <u-details
          data-state="idle"
          open
          role="group"
          data-active-step-label="Første steg"
        >
          <u-summary
            aria-expanded="true"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Første seksjon
            </span>
          </u-summary>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
        </u-details>
        <u-details
          data-state="idle"
          open
          role="group"
        >
          <u-summary
            aria-expanded="true"
            role="button"
            slot="summary"
            tabindex="0"
          >
            <span>
              Andre seksjon
            </span>
          </u-summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Første steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Andre steg
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Tredje steg
          </button>
        </u-details>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
        >
          <div>
          </div>
          Bekreftelse
        </button>
      </div>
    </div>
    <div>
      <div>
        <button
          data-variant="secondary"
          type="button"
          aria-haspopup="dialog"
          data-color="neutral"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              fill-rule="evenodd"
              d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
              clip-rule="evenodd"
            >
            </path>
          </svg>
          Naviger
        </button>
        <dialog
          data-placement="center"
          data-modal="true"
          closedby="any"
          style="width: fit-content; min-width: 20rem;"
        >
          <button
            data-icon="true"
            data-variant="tertiary"
            type="button"
            aria-label="Lukk dialogvindu"
            data-color="neutral"
            data-command="close"
          >
          </button>
          <h2>
            Naviger
          </h2>
          <div>
            <u-details
              data-state="idle"
              open
              role="group"
              data-active-step-label="Første steg"
            >
              <u-summary
                aria-expanded="true"
                role="button"
                slot="summary"
                tabindex="0"
              >
                <span>
                  Første seksjon
                </span>
              </u-summary>
              <button
                data-state="active"
                data-variant="default"
                aria-current="step"
              >
                <div>
                </div>
                Første steg
              </button>
              <button
                data-state="idle"
                data-variant="default"
              >
                <div>
                </div>
                Andre steg
              </button>
            </u-details>
            <u-details
              data-state="idle"
              open
              role="group"
            >
              <u-summary
                aria-expanded="true"
                role="button"
                slot="summary"
                tabindex="0"
              >
                <span>
                  Andre seksjon
                </span>
              </u-summary>
              <button
                data-state="idle"
                data-variant="default"
              >
                <div>
                </div>
                Første steg
              </button>
              <button
                data-state="idle"
                data-variant="default"
              >
                <div>
                </div>
                Andre steg
              </button>
              <button
                data-state="idle"
                data-variant="default"
              >
                <div>
                </div>
                Tredje steg
              </button>
            </u-details>
            <button
              data-state="idle"
              data-variant="submission"
            >
              <div>
              </div>
              Innsending
            </button>
            <button
              data-state="idle"
              data-variant="confirmation"
            >
              <div>
              </div>
              Bekreftelse
            </button>
          </div>
        </dialog>
      </div>
      <h2 data-size="sm">
        Første seksjon
      </h2>
      <form>
        <div>
          <label
            data-weight="medium"
            for="q1"
          >
            Første spørsmål
          </label>
          <div>
            <input
              id="q1"
              type="text"
              name="q1"
            >
          </div>
        </div>
        <div>
          <label
            data-weight="medium"
            for="q2"
          >
            Andre spørsmål
          </label>
          <div>
            <input
              id="q2"
              type="text"
              name="q2"
            >
          </div>
        </div>
        <div>
          <button
            data-variant="secondary"
            type="button"
          >
            Neste
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Grouping 1`] = `
<div data-size="auto">
  <div>
    <u-details
      data-state="idle"
      open
      role="group"
      data-active-step-label="Første steg"
    >
      <u-summary
        aria-expanded="true"
        role="button"
        slot="summary"
        tabindex="0"
      >
        <span>
          Seksjon
        </span>
      </u-summary>
      <button
        data-state="active"
        data-variant="default"
        aria-current="step"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="idle"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
    </u-details>
  </div>
</div>
`;

exports[`Preview 1`] = `
<div data-size="auto">
  <div>
    <button
      data-state="active"
      data-variant="default"
      aria-current="step"
    >
      <div>
      </div>
      Steg
    </button>
    <u-details
      data-state="idle"
      open
      role="group"
    >
      <u-summary
        aria-expanded="true"
        role="button"
        slot="summary"
        tabindex="0"
      >
        <span>
          Seksjon
        </span>
      </u-summary>
      <button
        data-state="idle"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="idle"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
    </u-details>
  </div>
</div>
`;

exports[`Simple Navigation 1`] = `
<div data-size="auto">
  <div>
    <div>
      <u-details
        data-state="idle"
        open
        role="group"
        data-active-step-label="Steg 1"
      >
        <u-summary
          aria-expanded="true"
          role="button"
          slot="summary"
          tabindex="0"
        >
          <span>
            Seksjon
          </span>
        </u-summary>
        <button
          data-state="active"
          data-variant="default"
          aria-current="step"
        >
          <div>
          </div>
          Steg 1
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Steg 2
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Innsending
        </button>
      </u-details>
    </div>
    <div>
      <h2 data-size="sm">
        Utfylling
      </h2>
      <form>
        <div>
          <label
            data-weight="medium"
            for="step1"
          >
            Steg 1
          </label>
          <div>
            <input
              id="step1"
              type="text"
              name="step1"
            >
          </div>
        </div>
        <div>
          <button
            data-variant="secondary"
            type="button"
          >
            Neste
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single Step 1`] = `
<div data-size="auto">
  <div>
    <button
      data-state="idle"
      data-variant="default"
    >
      <div>
      </div>
      Steg
    </button>
  </div>
</div>
`;

exports[`States 1`] = `
<div data-size="auto">
  <div>
    <button
      data-state="idle"
      data-variant="info"
    >
      <div>
      </div>
      Infoside
    </button>
    <button
      data-state="completed"
      data-variant="default"
    >
      <div>
      </div>
      Frittstående steg
    </button>
    <button
      data-state="invalid"
      data-variant="default"
      aria-invalid="true"
    >
      <div>
      </div>
      Frittstående steg
    </button>
    <u-details
      data-state="completed"
      open
      role="group"
    >
      <u-summary
        aria-expanded="true"
        role="button"
        slot="summary"
        tabindex="0"
      >
        <span>
          Første seksjon
        </span>
      </u-summary>
      <button
        data-state="idle"
        data-variant="info"
      >
        <div>
        </div>
        Infoside
      </button>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
    </u-details>
    <u-details
      data-state="invalid"
      open
      role="group"
    >
      <u-summary
        aria-invalid
        aria-expanded="true"
        role="button"
        slot="summary"
        tabindex="0"
      >
        <span>
          Andre seksjon
        </span>
      </u-summary>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="invalid"
        data-variant="default"
        aria-invalid="true"
      >
        <div>
        </div>
        Andre steg
      </button>
      <button
        data-state="invalid"
        data-variant="default"
        aria-invalid="true"
      >
        <div>
        </div>
        Tredje steg
      </button>
    </u-details>
    <u-details
      data-state="idle"
      open
      role="group"
      data-active-step-label="Tredje steg"
    >
      <u-summary
        aria-expanded="true"
        role="button"
        slot="summary"
        tabindex="0"
      >
        <span>
          Tredje seksjon
        </span>
      </u-summary>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Første steg
      </button>
      <button
        data-state="completed"
        data-variant="default"
      >
        <div>
        </div>
        Andre steg
      </button>
      <button
        data-state="active"
        data-variant="default"
        aria-current="step"
      >
        <div>
        </div>
        Tredje steg
      </button>
    </u-details>
    <button
      data-state="idle"
      data-variant="submission"
    >
      <div>
      </div>
      Innsending
    </button>
    <button
      data-state="idle"
      data-variant="confirmation"
    >
      <div>
      </div>
      Bekreftelse
    </button>
    <button
      data-state="idle"
      data-variant="summary"
    >
      <div>
      </div>
      Oppsummering
    </button>
  </div>
</div>
`;
